fix: display on tablet and mobile

--- a/halcyon-shop/src/assets/css/main.scss
+++ b/halcyon-shop/src/assets/css/main.scss
@@ -30,3 +30,9 @@ img{
 .grayBut {
     background-color: #454e53;
   }
+
+  .toolbar{
+      padding-left: 0 !important;
+      padding-right: 0 !important;
+
+  }
